create the unique id for any room and store it in RAM (needed for mocking the "fake" DB for add and retrive operations) using crypto
